# static-pfunc-analysis

./: README.md
bld/: README.md
llvm/: CMakeLists.txt
llvm/pass/: CMakeLists.txt  analysis.cpp  analysis.h
tests/: Makefile  README.md  example.c  example2.c  mpk_apis.h
